# hd44780_ntb

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/rpi4bit/: main.rs
examples/rpi4bit/.cargo/: config
examples/rpi8bit/: main.rs
examples/rpi8bit/.cargo/: config
hd44780_ntb/: Cargo.toml
hd44780_ntb/examples/rpi4bit/: main.rs
hd44780_ntb/examples/rpi4bit/.cargo/: config
hd44780_ntb/examples/rpi8bit/: main.rs
hd44780_ntb/src/: cmd.rs  error.rs  lib.rs  write.rs
hd44780_ntb/src/driver/: gpio_driver.rs  mod.rs  spy_driver.rs
hd44780_ntb/tests/: hd44780_driver.rs
hd44780_ntb/tests/spy_driver/: mod.rs
src/: cmd.rs
src/driver/: gpio_driver.rs  spy_driver.rs
