[package]
name = "hd44780-ntb"
version = "0.0.7"
authors = ["Michael Cummings <dragonrun1@gmail.com>"]
description = "A non-text buffer embedded hal driver for hd44780 like LCD display controllers"
edition = "2018"
keywords = ["lcd", "embedded-hal-driver", "embedded-hal", "hd44780"]
categories = ["embedded", "hardware-support", "os"]
license = "MIT"
homepage = "https://github.com/Dragonrun1/hd44780_ntb"
readme = "README.md"
repository = "https://github.com/Dragonrun1/hd44780_ntb"

[dependencies]
bitflags = "1.2.1"
embedded-hal = "0.2.4"
sysfs_gpio = "0.5.4"
thiserror = "1.0.20"

[dev-dependencies]
anyhow = "1.0.32"
linux-embedded-hal = "0.3.0"

