[package]
name = "hd44780-ntb"
version = "0.0.3"
authors = ["Michael Cummings <dragonrun1@gmail.com>"]
edition = "2018"
keywords = ["lcd", "embedded-hal-driver", "embedded-hal", "hd44780"]
categories = ["embedded", "hardware-support", "linux"]
license = "MIT"

[dependencies]
bitflags = "1.2.1"
embedded-hal = "0.2.3"
sysfs_gpio = "0.5.4"
thiserror = "1.0.20"

[dev-dependencies]
anyhow = "1.0.31"
linux-embedded-hal = "0.3.0"

